--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width" />
   <link rel="stylesheet" href="css/leaflet.css" />
-  <link rel="icon" href="data/NewLogo21.png" type="image/png" />
+  <link rel="icon" href="data/1-aafea2ea.ico" type="image/ico" />
   <style>
     html, body {
       width: 100%; height: 100%; margin: 0; padding: 0;
