--- a/index.html
+++ b/index.html
@@ -220,6 +220,8 @@
       [52.28, 5.35]
     ],
     maxBoundsViscosity: 1.0
+    zoomSnap: 0.5,    // kleinere stapjes bij in-/uitzoomen
+  zoomDelta: 0.5    // fijnere scrollstappen
   }).setView(getCenterCoords(), 12);
 
   // Zoom- en schaalcontrolen toevoegen
