--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       position: absolute;
       top: 0; left: 0; right: 0;
       height: 80px;
-      background: white; /* aangepast van transparent naar white */
+      background: white;
       display: flex;
       align-items: center;
       padding: 0 15px;
@@ -113,7 +113,6 @@
       pointer-events: auto;
       user-select: none;
     }
-    /* Legenda */
     .legend {
       position: absolute;
       bottom: 10px;
@@ -202,10 +201,9 @@
     }
   });
 
-  // Functie om de juiste center-coördinaten te bepalen
   function getCenterCoords() {
     if (window.innerWidth <= 768) {
-      return [52.10, 5.10];  // mobiel: iets meer westelijk (aanpassen indien nodig)
+      return [52.10, 5.10];  // mobiel iets westelijker
     } else {
       return [52.09, 5.42];  // desktop
     }
@@ -219,10 +217,11 @@
       [51.90, 4.75],
       [52.28, 5.35]
     ],
-    maxBoundsViscosity: 1.0
+    maxBoundsViscosity: 1.0,
+    zoomSnap: 0.5,
+    zoomDelta: 0.5
   }).setView(getCenterCoords(), 12);
 
-  // Zoom- en schaalcontrolen toevoegen
   L.control.zoom({ position: 'topright' }).addTo(map);
   L.control.scale({ position: 'bottomright' }).addTo(map);
 
@@ -304,7 +303,6 @@
     updateScores();
   });
 
-  // Bij vensterresizen de kaart opnieuw centreren
   window.addEventListener('resize', () => {
     map.setView(getCenterCoords(), 12);
   });
