Update index.html - extra 0.5 uitzoomen

--- a/index.html
+++ b/index.html
@@ -221,7 +221,9 @@
     zoomSnap: 0.5,
     zoomDelta: 0.5
   }).setView(getCenterCoords(), 12);
-
+  
+  map.setZoom(map.getZoom() - 0.5);
+  
   L.control.zoom({ position: 'topright' }).addTo(map);
   L.control.scale({ position: 'bottomright' }).addTo(map);
 
